--- a/qcertificates/index.html
+++ b/qcertificates/index.html
@@ -150,7 +150,7 @@
       
         <div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
   <div class="bg-white mb3 pa4 gray overflow-hidden">
-    <span class="f6 db">Qcertificates</span>
+    <span class="f6 db">Certificates</span>
     <h1 class="f3 near-black">
       <a href="https://bishetheanswer.github.io/miguel-portfolio/qcertificates/certificate-1/" class="link black dim">
         IBM Data Science Professional Certificate
