--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          Performed data cleaning and feature selection. Analyzed the evolution of the amount of collisions through years. Analyzed how the collisions distribute through the day and how being influenced by alcohol/ drugs affects to collisions. Created a map using Folium to visualize the locations of the collisions. Built Decision Tree, K Nearest Neighbors and Logistic Regression models.    Link to GitHub Repository
+          Performed data cleaning and feature selection. Analyzed the evolution of the amount of collisions through the years. Analyzed how the collisions distribute through the day and how being influenced by alcohol/ drugs affects to collisions. Created a map using Folium to visualize the locations of the collisions. Built Decision Tree, K Nearest Neighbors and Logistic Regression models.    Link to GitHub Repository
         </div>
           <a href="https://bishetheanswer.github.io/miguel-portfolio/post/chapter-1/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
